refactor: 优化乘客web端发起支付时使用优惠券功能